--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
+    <a href="../index.html">Home Page</a>
     <h1>Pasta</h1>
-    <img src="pasta.webp" alt="Pasta" height="300" width="300">
+    <img src="../images/pasta.webp" alt="Pasta" height="300" width="300">
     <h2>Description</h2>
         <p>With this recipe you will be able to make the best pasta in the world</p>
         <p>They are going to be so massive then even the biggest animal on the planet
